--- a/Part1/index.html
+++ b/Part1/index.html
@@ -33,7 +33,9 @@
     <span>Player </span>
     <span id="player">X</span>
     <span>'s turn</span>
+    <button onclick="reset()">Reset</button>
   </main>
+  <script src="./index.js"></script>
 </body>
 
 </html>
